--- a/DATN/src/main/resources/templates/components/_banner.html
+++ b/DATN/src/main/resources/templates/components/_banner.html
@@ -1,32 +1,13 @@
-<section class="w-full mx-auto mt-5">
-    <div class="carousel w-full rounded-box">
-        <div id="slide1" class="carousel-item relative w-full rounded-lg">
-           <img src="https://img.upanh.tv/2023/11/21/Banner2.png" alt="Banner2.png" class="w-full rounded-lg">
-          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-            <a href="#slide4" class="btn btn-circle">❮</a> 
-            <a href="#slide2" class="btn btn-circle">❯</a>
-          </div>
-        </div> 
-        <div id="slide2" class="carousel-item relative w-full">
-            <img src="https://img.upanh.tv/2023/11/21/Banner2.png" alt="Banner2.png" class="w-full rounded-lg">
-          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-            <a href="#slide1" class="btn  btn-outline">❮</a> 
-            <a href="#slide3" class="btn btn-circle">❯</a>
-          </div>
-        </div> 
-        <div id="slide3" class="carousel-item relative w-full">
-            <img src="https://img.upanh.tv/2023/11/21/Banner2.png" alt="Banner2.png" class="w-full rounded-lg">
-          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-            <a href="#slide2" class="btn btn-circle">❮</a> 
-            <a href="#slide4" class="btn btn-circle">❯</a>
-          </div>
-        </div> 
-        <div id="slide4" class="carousel-item relative w-full">
-            <img src="https://img.upanh.tv/2023/11/21/Banner2.png" alt="Banner2.png" class="w-full rounded-lg">
-          <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-            <a href="#slide3" class="btn btn-circle">❮</a> 
-            <a href="#slide1" class="btn btn-circle">❯</a>
-          </div>
-        </div>
-      </div>
+<!-- Banner -->
+<section class="w-[80%] mx-auto">
+  <div class="diff aspect-[16/9]">
+    <div class="diff-item-1">
+      <img alt="daisy" src="/assets/images/sgx.png">
+    </div>
+    <div class="diff-item-2">
+      <img alt="daisy" src="/assets/images/sgx4-4273.jpeg">
+    </div>
+    <div class="diff-resizer" style="width: 1142px;"></div>
+
+  </div>
 </section>
