--- a/DATN/src/main/resources/templates/components/_header.html
+++ b/DATN/src/main/resources/templates/components/_header.html
@@ -1,77 +1,88 @@
-<header class="w-full shadow sticky top-0 bg-white z-[9999]">
-    <section class="w-[90%] md:w-[80%] mx-auto   ">
-        <div class="w-full flex justify-between items-center py-3">
-            <div class="text-3xl font-bold text-black group">
-                <a href="/">Mari<span class="duration-300 group-hover:duration-300 group-hover:text-orange-300">.ous</span></a>
+<header class="w-full shadow sticky top-0 bg-white z-[9999]" th:fragment="header">
+  <section class="w-[90%] md:w-[80%] mx-auto   ">
+    <div class="w-full flex justify-between items-center py-3">
+      <div class="text-3xl font-bold text-black group">
+        <a href="/">Mari<span class="duration-300 group-hover:duration-300 group-hover:text-orange-300">.ous</span></a>
+      </div>
+      <div class="flex gap-x-10 items-center">
+        <div class=" gap-x-10 text-black font-light hidden lg:flex">
+          <div class="">
+            <a href=""
+              class="duration-300 hover:duration-300 hover:text-orange-300 hover:underline hover:underline-offset-2">Home</a>
+          </div>
+          <div class="">
+            <a href=""
+              class="duration-300 hover:duration-300 hover:text-orange-300 hover:underline hover:underline-offset-2">About</a>
+          </div>
+          <div class="">
+            <div class="dropdown dropdown-bottom">
+              <label tabindex="0"
+                class="duration-300 hover:duration-300 hover:text-orange-300 hover:underline hover:underline-offset-2 cursor-pointer">Product</label>
+              <ul tabindex="0" class="dropdown-content z-[1] mt-5 menu p-2 shadow bg-white rounded-box w-52">
+                <li><a>Item 1</a></li>
+                <li><a>Item 2</a></li>
+              </ul>
             </div>
-            <div class="flex gap-x-10 items-center">
-                <div class=" gap-x-10 text-black font-light hidden lg:flex">
-                    <div class="">
-                        <a href="" class="duration-300 hover:duration-300 hover:text-orange-300 hover:underline hover:underline-offset-2">Home</a>
-                    </div>
-                    <div class="">
-                        <a href="" class="duration-300 hover:duration-300 hover:text-orange-300 hover:underline hover:underline-offset-2">About</a>
-                    </div>
-                    <div class="">
-                        <div class="dropdown dropdown-bottom">
-                            <label tabindex="0" class="duration-300 hover:duration-300 hover:text-orange-300 hover:underline hover:underline-offset-2 cursor-pointer">Product</label>
-                            <ul tabindex="0" class="dropdown-content z-[1] mt-5 menu p-2 shadow bg-white rounded-box w-52">
-                              <li><a>Item 1</a></li>
-                              <li><a>Item 2</a></li>
-                            </ul>
-                          </div>
-                    </div>
-                    <div class="">
-                        <a href="" class="duration-300 hover:duration-300 hover:text-orange-300 hover:underline hover:underline-offset-2 ">Blogs</a>
-                    </div>
-                    <div class="">
-                        <a href="" class="duration-300 hover:duration-300 hover:text-orange-300 hover:underline hover:underline-offset-2">Contact</a>
-                    </div>
-                </div>
-                <div class="flex gap-x-5 mt-1 text-orange-300 text-2xl lg:text-xl">
-                    <a href="" class=" text-center items-center duration-300 hover:border hover:pt-1 hover:px-2 hover:border-orange-300 rounded hover:duration-300"><ion-icon name="search-outline"></ion-icon></a>                         
-                    <div class="dropdown dropdown-hover">
-                        <label tabindex="0" class=" text-center items-center duration-300 hover:border hover:pt-1 hover:px-2 hover:border-orange-300 rounded hover:duration-300"><ion-icon name="person-outline"></ion-icon></label>
-                        <ul tabindex="0" class="dropdown-content z-[1] menu p-2 shadow bg-white  rounded-box w-40">
-                          <li><a>Sign-in</a></li>
-                          <li><a>Sign-up</a></li>
-                        </ul>
-                    </div>
-                    <a href="" class=" text-center items-center duration-300 hover:border hover:pt-1 hover:px-2 hover:border-orange-300 rounded hover:duration-300"><ion-icon name="cart-outline"></ion-icon></a>
-                    
-
-                    <div class="drawer drawer-end z-[9999] block lg:hidden">
-                        <input id="my-drawer-4" type="checkbox" class="drawer-toggle" />
-                        <div class="drawer-content">
-                          <!-- Page content here -->
-                          <label for="my-drawer-4" class="drawer-button "><ion-icon class="" name="menu-outline"></ion-icon></label>
-                        </div> 
-                        <div class="drawer-side z-[99999]">
-                          <label for="my-drawer-4" aria-label="close sidebar" class="drawer-overlay"></label>
-                          <ul class="menu p-4 w-80  min-h-full bg-white text-base-content text-black text-lg">
-                            <div class="py-5">
-                                <p class="uppercase text-4xl text-black font-bold">Mari<span class="text-orange-300">.ous</span></p>
-                            </div>
-                            <!-- Sidebar content here -->
-                            <li class="duration-300 hover:duration-300 hover:text-orange-300"><a>Home</a></li>
-                            <li class="duration-300 hover:duration-300 hover:text-orange-300"><a>About</a></li>
-                            <li >
-                                <details>
-                                  <summary class="duration-300 hover:duration-300 hover:text-orange-300">Product</summary>
-                                  <ul>
-                                    <li><a>Sofa</a></li>
-                                    <li><a>Table</a></li>
-                                    
-                                  </ul>
-                                </details>
-                              </li>
-                            <li class="duration-300 hover:duration-300 hover:text-orange-300"><a>Blogs</a></li>
-                            <li class="duration-300 hover:duration-300 hover:text-orange-300"><a>Contact</a></li>
-                          </ul>
-                        </div>
-                      </div>
-                </div>
-            </div>
+          </div>
+          <div class="">
+            <a href=""
+              class="duration-300 hover:duration-300 hover:text-orange-300 hover:underline hover:underline-offset-2 ">Blogs</a>
+          </div>
+          <div class="">
+            <a href=""
+              class="duration-300 hover:duration-300 hover:text-orange-300 hover:underline hover:underline-offset-2">Contact</a>
+          </div>
         </div>
-    </section>
+        <div class="flex gap-x-5 mt-1 text-orange-300 text-2xl lg:text-xl">
+          <a href=""
+            class=" text-center items-center duration-300 hover:border hover:pt-1 hover:px-2 hover:border-orange-300 rounded hover:duration-300"><ion-icon
+              name="search-outline"></ion-icon></a>
+          <div class="dropdown dropdown-hover">
+            <label tabindex="0"
+              class=" text-center items-center duration-300 hover:border hover:pt-1 hover:px-2 hover:border-orange-300 rounded hover:duration-300"><ion-icon
+                name="person-outline"></ion-icon></label>
+            <ul tabindex="0" class="dropdown-content z-[1] menu p-2 shadow bg-white  rounded-box w-40">
+              <li><a>Sign-in</a></li>
+              <li><a>Sign-up</a></li>
+            </ul>
+          </div>
+          <a href=""
+            class=" text-center items-center duration-300 hover:border hover:pt-1 hover:px-2 hover:border-orange-300 rounded hover:duration-300"><ion-icon
+              name="cart-outline"></ion-icon></a>
+
+
+          <div class="drawer drawer-end z-[9999] block lg:hidden">
+            <input id="my-drawer-4" type="checkbox" class="drawer-toggle" />
+            <div class="drawer-content">
+              <!-- Page content here -->
+              <label for="my-drawer-4" class="drawer-button "><ion-icon class="" name="menu-outline"></ion-icon></label>
+            </div>
+            <div class="drawer-side z-[99999]">
+              <label for="my-drawer-4" aria-label="close sidebar" class="drawer-overlay"></label>
+              <ul class="menu p-4 w-80  min-h-full bg-white text-base-content text-black text-lg">
+                <div class="py-5">
+                  <p class="uppercase text-4xl text-black font-bold">Mari<span class="text-orange-300">.ous</span></p>
+                </div>
+                <!-- Sidebar content here -->
+                <li class="duration-300 hover:duration-300 hover:text-orange-300"><a>Home</a></li>
+                <li class="duration-300 hover:duration-300 hover:text-orange-300"><a>About</a></li>
+                <li>
+                  <details>
+                    <summary class="duration-300 hover:duration-300 hover:text-orange-300">Product</summary>
+                    <ul>
+                      <li><a>Sofa</a></li>
+                      <li><a>Table</a></li>
+
+                    </ul>
+                  </details>
+                </li>
+                <li class="duration-300 hover:duration-300 hover:text-orange-300"><a>Blogs</a></li>
+                <li class="duration-300 hover:duration-300 hover:text-orange-300"><a>Contact</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </header>
