--- a/DATN/src/main/resources/templates/components/_navigation.html
+++ b/DATN/src/main/resources/templates/components/_navigation.html
@@ -1,12 +1,13 @@
-<nav class="w-full bg-black">
+<nav class="w-full bg-black" th:fragment="navigation">
     <div class="w-[90%] md:w-[80%] mx-auto hidden lg:block">
         <div class="w-full flex justify-between text-xs font-light text-white items-center py-2">
             <div class="flex gap-x-1">
                 <ion-icon class="text-sm" name="call-outline"></ion-icon>
-                <p>Hotline: </p><p>0916215180</p>
+                <p>Hotline: </p>
+                <p>0916215180</p>
             </div>
             <div class="">
-                <p>Follow Us  and get a chance to win 80% off</p>
+                <p>Follow Us and get a chance to win 80% off</p>
             </div>
             <div class="flex gap-x-2">
                 <ion-icon class="text-sm" name="earth-outline"></ion-icon>
