--- a/DATN/src/main/resources/templates/components/_banner.html
+++ b/DATN/src/main/resources/templates/components/_banner.html
@@ -1,6 +1,6 @@
 <!-- Banner -->
-<section class="w-[80%] mx-auto">
-  <div class="diff aspect-[16/9]">
+<section class="w-[80%] mx-auto mt-5">
+  <div class="diff aspect-[16/9] rounded-box">
     <div class="diff-item-1">
       <img alt="daisy" src="/assets/images/sgx.png">
     </div>
