--- a/DATN/src/main/resources/templates/components/index.html
+++ b/DATN/src/main/resources/templates/components/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="bg-white min-h-screen">
     <div th:replace="./components/_banner.html"></div>
 
     <section class="container mx-auto py-10 my-8 px-2">
