--- a/DATN/src/main/resources/templates/components/_category.html
+++ b/DATN/src/main/resources/templates/components/_category.html
@@ -1,9 +1,11 @@
 <section class="w-[80%] pt-8  mx-auto px-4">
-    <div class="hover:animate-pulse grid grid-cols-1 grid-rows-2 grid-flow-col gap-2">
-        <div class="row-span-2 h-[600px] "><img src="/assets/images/z4766307084303_a6667a1ec24ba719aa27be1e9328ec3a.jpg"
-                class="h-[h-5]" alt=""></div>
-        <div class="col-span-1 "><img src="/assets/images/sgx.png" alt="" class="h-[245px] "></div>
-        <div class="row-span-1 col-span-1"><img src="/assets/images/sgx.png" class="h-[245px] " alt=""></div>
-    </div>
-
+   <div class="flex flex-col lg:flex-row gap-x-4 gap-y-1 w-full">
+        <div class="">
+            <img class="rounded-lg" src="/assets/images/main_category.jpg" alt="">
+        </div>
+        <div class="grid grid-cols-2 lg:flex   lg:flex-col gap-y-4 gap-x-1">
+            <img class="rounded-lg" src="/assets/images/side_category.jpg" alt="">
+            <img class="rounded-lg" src="/assets/images/side_category.jpg" alt="">
+        </div>
+   </div>
 </section>
