--- a/DATN/src/main/resources/templates/components/layout.html
+++ b/DATN/src/main/resources/templates/components/layout.html
@@ -8,12 +8,13 @@
     <!-- Library -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.4.2/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
-        <!-- icon -->
-        <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-        <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-        <!-- icon -->
+    <!-- icon -->
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <!-- icon -->
     <!-- Library -->
-    <script src='https://www.google.com/recaptcha/api.js' async defer ></script>
+    <script src='https://www.google.com/recaptcha/api.js' async defer></script>
+    <link rel="stylesheet" href="https://cdn.tailgrids.com/tailgrids-fallback.css" />
 </head>
 
 <body>
